<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".ui.product_details.ProductDetailsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="back"
            android:padding="16dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:tint="@color/colorBlack" />

        <TextView
            android:id="@+id/product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:text="@string/cart"
            android:textColor="@color/colorBlack"
            android:textSize="22sp" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/cart_details"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="-16dp"
            android:fitsSystemWindows="true"
            android:padding="16dp"
            android:visibility="visible"
            tools:context=".ui.product_details.ProductDetailsActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/cart_products_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical" />

                <View
                    android:layout_marginTop="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="#E73140"/>
                <EditText
                    android:id="@+id/lead_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/shape_edit_bg"
                    android:hint="@string/name"
                    android:padding="16dp" />

                <EditText
                    android:id="@+id/lead_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/shape_edit_bg"
                    android:hint="@string/phone"
                    android:padding="16dp" />

                <EditText
                    android:id="@+id/lead_providence"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/shape_edit_bg"
                    android:hint="@string/name"
                    android:padding="16dp"
                    android:text="The Emirate" />

                <EditText
                    android:id="@+id/lead_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/shape_edit_bg"
                    android:hint="@string/address"
                    android:padding="16dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="24dp"
                    android:background="@drawable/shape_bg_button_red"
                    android:onClick="makeOrder"
                    android:padding="12dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/shape_bg_button_red"
                        android:text="Buy"
                        android:textAllCaps="false"
                        android:textColor="@color/colorWhite"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="4dp"
                        android:background="@drawable/shape_bg_button_red"
                        android:text="@string/total_price"
                        android:textAllCaps="false"
                        android:textColor="@color/colorWhite" />

                    <TextView
                        android:id="@+id/total_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/shape_bg_button_red"
                        android:textAllCaps="false"
                        android:textColor="@color/colorWhite" />

                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:id="@+id/empty_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="-16dp"
                android:src="@drawable/ic_empty_car"
                android:tint="@color/grey_400" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="Your cart is empty"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>


    </RelativeLayout>


</LinearLayout>