<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.product_details.ProductDetailsActivity">

    <LinearLayout
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:padding="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="back"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:tint="@color/colorBlack" />

        <TextView
            android:layout_marginEnd="16dp"
            android:layout_gravity="center"
            android:id="@+id/product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textColor="@color/colorBlack" />


    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-16dp"
        android:padding="16dp"
        tools:context=".ui.product_details.ProductDetailsActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="250dp">


                <com.facebook.drawee.view.SimpleDraweeView
                    android:id="@+id/product_image"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:background="@color/colorWhite"
                    app:actualImageScaleType="centerInside"
                    app:placeholderImageScaleType="centerInside"
                    app:progressBarAutoRotateInterval="1000"
                    app:progressBarImage="@drawable/ic_loading" />


                <!--    custom float bar-->
                <androidx.cardview.widget.CardView
                    android:id="@+id/cart_button"
                    android:layout_width="50dp"
                    android:onClick="addToCart"
                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_margin="16dp"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardBackgroundColor="@color/colorAccent"
                    app:cardCornerRadius="35dp"
                    app:cardElevation="8dp">

                    <ImageView
                        android:id="@+id/cart_button_image"
                        android:layout_width="33dp"
                        android:layout_height="33dp"
                        android:tint="@color/colorWhite"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:contentDescription="@string/cart"
                        android:src="@drawable/ic_add_to_cart" />

                </androidx.cardview.widget.CardView>

            </RelativeLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/images_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:orientation="vertical" />


            <WebView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingBottom="8dp">

                    <TextView
                        android:id="@+id/discount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/strikethrough_foreground"
                        android:text="56AED" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/ic_arrow_price" />


                    <TextView
                        android:id="@+id/price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="56AED"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold" />
                </LinearLayout>

                <View
                    android:id="@+id/title"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" />

                <LinearLayout
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:onClick="decreaseCunt"
                        android:id="@+id/minus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:src="@drawable/ic_minus" />

                    <TextView
                        android:id="@+id/count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:text="1"
                        android:textColor="@color/colorBlack" />

                    <ImageView
                        android:onClick="increaseCount"
                        android:id="@+id/plus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:src="@drawable/ic_plus" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/left_in_stock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/left_in_stock"
                android:textColor="@color/colorYellow"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/lead_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/shape_edit_bg"
                android:hint="@string/name"
                android:padding="16dp" />

            <EditText
                android:id="@+id/lead_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/shape_edit_bg"
                android:hint="@string/phone"
                android:padding="16dp" />

            <EditText
                android:id="@+id/lead_providence"
                android:text="The Emirate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/shape_edit_bg"
                android:hint="@string/name"
                android:padding="16dp" />

            <EditText
                android:id="@+id/lead_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/shape_edit_bg"
                android:hint="@string/address"
                android:padding="16dp" />


            <LinearLayout
                android:onClick="makeOrder"
                android:layout_margin="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_bg_button_red"
                android:padding="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/shape_bg_button_red"
                    android:text="@string/buy"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/shape_bg_button_red"
                    android:text="@string/total_price"
                    android:textAllCaps="false"
                    android:layout_marginEnd="4dp"
                    android:textColor="@color/colorWhite"/>

                <TextView
                    android:id="@+id/total_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/shape_bg_button_red"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"/>

            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>